<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".MainActivity">


    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="220dp"
        android:background="@drawable/up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/todo"

        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.826"
        app:srcCompat="@drawable/ic_undraw_register_logo_re_gxtj"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textViewRegister"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/registeration"
        android:textColor="#171B65"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        tools:ignore="MissingConstraints" />


    <View
        android:id="@+id/downview"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:background="@drawable/down"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText

        android:id="@+id/editTextTextPersonName"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:textColor="#171B65"
        android:background="@drawable/custom_input"
        android:backgroundTintMode="src_in"
        android:drawableStart="@drawable/custom_person"
        android:drawablePadding="5dp"
        android:padding="15dp"
        android:elevation="5dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/downview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.372"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/Numberid_Family"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:textColor="#171B65"

        android:background="@drawable/custom_input"
        android:backgroundTintMode="src_in"
        android:drawableStart="@drawable/custom_person_add"
        android:drawablePadding="5dp"
        android:padding="15dp"
        android:elevation="5dp"
        android:ems="10"
        android:hint="Number of family"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/downview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.418"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        app:layout_constraintVertical_bias="0.049" />


    <EditText
        android:id="@+id/Numberid_Relative"
        android:layout_width="350dp"
        android:textColor="#171B65"

        android:layout_height="wrap_content"
        android:background="@drawable/custom_input"
        android:backgroundTintMode="src_in"
        android:drawableStart="@drawable/custom_person_add"
        android:drawablePadding="5dp"
        android:padding="15dp"
        android:elevation="5dp"
        android:ems="10"
        android:hint="Number of relative"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/downview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.418"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Numberid_Family"
        app:layout_constraintVertical_bias="0.053" />

    <EditText
        android:id="@+id/Emailid"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/custom_input"
        android:backgroundTintMode="src_in"
        android:drawableStart="@drawable/custom_email"
        android:drawablePadding="5dp"
        android:padding="15dp"
        android:elevation="5dp"
        android:textColor="#171B65"

        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"

        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/downview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.372"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Numberid_Relative"
        app:layout_constraintVertical_bias="0.094" />

    <EditText
        android:id="@+id/Passwordid"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_input"
        android:backgroundTintMode="src_in"
        android:drawableStart="@drawable/custom_lock"
        android:drawablePadding="5dp"
        android:padding="15dp"
        android:elevation="5dp"
        android:ems="10"
        android:textColor="#171B65"
        android:hapticFeedbackEnabled="false"
        android:hint="Password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/downview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.372"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Emailid"
        app:layout_constraintVertical_bias="0.113" />

    <Button
        android:id="@+id/bu_Registerid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:fontFamily="serif"
        android:paddingStart="25dp"
        android:paddingTop="15dp"
        android:paddingEnd="25dp"
        android:paddingBottom="15dp"
        android:text="@string/registeration"
        android:backgroundTint="#DCB237"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.813" />

    <Button
        android:id="@+id/bu_loginid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:fontFamily="serif"
        android:paddingStart="25dp"
        android:paddingTop="15dp"
        android:paddingEnd="25dp"
        android:paddingBottom="15dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/downview"
        app:layout_constraintHorizontal_bias="0.924"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bu_Registerid"
        app:layout_constraintVertical_bias="0.243" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_already_have_an_account"
        android:textColor="#171B65"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/bu_loginid"
        app:layout_constraintEnd_toStartOf="@+id/bu_loginid"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bu_loginid"
        app:layout_constraintVertical_bias="0.593"
        tools:ignore="MissingConstraints" />


    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:layout_constraintVertical_bias="0.969" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:indeterminateTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/downview"
        app:layout_constraintTop_toTopOf="@+id/downview"
        app:layout_constraintVertical_bias="0.789" />




</androidx.constraintlayout.widget.ConstraintLayout>