<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".Activity_login">

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="220dp"
        android:background="@drawable/up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/todo"

        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_undraw_mobile_login_re_9ntv"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/login"
        android:textColor="#171B65"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/downview"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:background="@drawable/down"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/Emailid"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:autofillHints=""

        android:background="@drawable/custom_input"
        android:backgroundTintMode="src_in"
        android:drawableStart="@drawable/custom_email"
        android:drawablePadding="5dp"
        android:elevation="5dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"

        android:minHeight="48dp"
        android:padding="15dp"
        app:layout_constraintBottom_toTopOf="@+id/downview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:layout_constraintVertical_bias="0.133" />

    <EditText
        android:id="@+id/Passwordid"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_input"
        android:backgroundTintMode="src_in"
        android:drawableStart="@drawable/custom_lock"
        android:drawablePadding="5dp"
        android:padding="15dp"
        android:elevation="5dp"
        android:ems="10"

        android:hapticFeedbackEnabled="false"
        android:hint="Password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/downview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Emailid"
        app:layout_constraintVertical_bias="0.077" />


    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:backgroundTint="#DCB237"
        android:fontFamily="serif"
        android:onClick="onCrickregister"
        android:paddingStart="25dp"
        android:paddingTop="15dp"
        android:paddingEnd="25dp"
        android:paddingBottom="15dp"
        android:text="@string/registeration"
        android:textAllCaps="false"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buLogin"
        app:layout_constraintVertical_bias="0.273" />

    <Button
        android:id="@+id/buLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:fontFamily="serif"
        android:paddingStart="25dp"
        android:paddingTop="15dp"
        android:paddingEnd="25dp"
        android:paddingBottom="15dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Passwordid"
        app:layout_constraintVertical_bias="0.163" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Don't Have An Account?"
        android:textColor="#171B65"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/buRegister"
        app:layout_constraintEnd_toStartOf="@+id/buRegister"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buRegister"
        app:layout_constraintVertical_bias="0.714"
        tools:ignore="MissingConstraints" />


<!--    <TextView-->
<!--        android:id="@+id/textView4"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->


<!--        android:text="-&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;  or sign in with  -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;"-->
<!--        android:textColor="#FF6D00"-->
<!--        android:textSize="15sp"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.438"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/buRegister"-->
<!--        app:layout_constraintVertical_bias="0.181"-->
<!--        tools:ignore="MissingConstraints" />-->

<!--    <ImageButton-->
<!--        android:id="@+id/Google"-->
<!--        android:layout_width="37dp"-->
<!--        android:layout_height="37dp"-->

<!--        android:background="@drawable/google"-->
<!--        android:fontFamily="serif"-->
<!--        android:paddingStart="25dp"-->
<!--        android:paddingTop="15dp"-->
<!--        android:paddingEnd="25dp"-->
<!--        android:paddingBottom="15dp"-->
<!--        android:textAllCaps="false"-->
<!--        android:textSize="13sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.584"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView4"-->
<!--        app:layout_constraintVertical_bias="0.129"-->
<!--        tools:ignore="MissingConstraints,OnClick,UsingOnClickInXml" />-->

<!--    <ImageButton-->
<!--        android:id="@+id/facebook"-->
<!--        android:layout_width="49dp"-->
<!--        android:layout_height="50dp"-->
<!--        android:background="@drawable/facebook2"-->
<!--        android:fontFamily="serif"-->
<!--        android:paddingStart="25dp"-->
<!--        android:paddingTop="15dp"-->
<!--        android:paddingEnd="25dp"-->
<!--        android:paddingBottom="15dp"-->
<!--        android:textAllCaps="false"-->
<!--        android:textSize="14sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/downview"-->
<!--        app:layout_constraintHorizontal_bias="0.167"-->
<!--        app:layout_constraintStart_toStartOf="@+id/textView4"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView4"-->
<!--        app:layout_constraintVertical_bias="0.061"-->
<!--        tools:ignore="MissingConstraints,OnClick,UsingOnClickInXml" />-->

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:indeterminateTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/downview"
        app:layout_constraintTop_toTopOf="@+id/downview"
        app:layout_constraintVertical_bias="0.789" />


    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot Password ?"
        android:textColor="#FFAB00"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.881"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view2"
        app:layout_constraintVertical_bias="0.348" />
</androidx.constraintlayout.widget.ConstraintLayout>